# marmos

./: .gitignore  LICENSE.txt  README.md  Tiltfile  __anonymous.json  meson.build
.github/actions/build-marmos/: action.yml
.github/actions/download-marmos/: action.yml
.github/workflows/: release.yml  test-docker.yml  test.yml
devops/pkg/docker/: Dockerfile
devops/pkg/opensuse-rpm/: marmos.spec
dogfood/typescript/: .gitignore  LICENSE.txt  README.md  package.json  pnpm-lock.yaml
dogfood/typescript/_test/docfx/: docfx.json
dogfood/typescript/src/commands/: convert.ts
dogfood/typescript/src/internal/docfx/: builder.ts  comments.ts  helpers.ts  index.ts  model.ts
src/marmos/: main.d  package.d  test_main.d
src/marmos/generic/: docparser.d  model.d  visitor.d
src/marmos/output/: json.d  typescript.d
subprojects/: dmd-fe.wrap
subprojects/packagefiles/dmd-fe/: meson.build
tests/blocks/equal-list/: expected.json  main.d
tests/blocks/ordered-list/: expected.json  main.d
tests/blocks/paragraph/: expected.json  main.d
tests/blocks/unordered-list/: expected.json  main.d
tests/inlines/bold/: expected.json  main.d
tests/inlines/code/: expected.json  main.d
tests/inlines/italic/: expected.json  main.d
tests/inlines/text/: expected.json  main.d
tests/module-basic/: expected.json  main.d
tests/syntax/alias-basic/: expected.json  main.d
tests/syntax/arrays-basic/: expected.json  main.d
tests/syntax/class-basic/: expected.json  main.d
tests/syntax/enum-basic/: expected.json  main.d
tests/syntax/function-auto/: expected.json  main.d
tests/syntax/function-basic/: expected.json  main.d
tests/syntax/function-parameters/: expected.json  main.d
tests/syntax/function-storageclasses/: expected.json  main.d
tests/syntax/interface-basic/: expected.json  main.d
tests/syntax/module-basic/: expected.json  main.d
tests/syntax/pointer-basic/: expected.json  main.d
tests/syntax/struct-basic/: expected.json  main.d
tests/syntax/template-basic/: expected.json  main.d
tests/syntax/template-mixin-basic/: expected.json  main.d
tests/syntax/template-parameters/: expected.json  main.d
tests/syntax/typeof-basic/: expected.json  main.d
tests/syntax/union-basic/: expected.json  main.d
tests/syntax/variable-basic/: expected.json  main.d
