#### Project configuration ####

project('dmd', 'd')

run_command('bash', '-c', 'echo -n /etc > SYSCONFDIR.imp')

#### Sources ####

SRC_DIR = 'compiler/src/dmd/'
src_dirs = include_directories('compiler/src/')
string_import_dirs = ['compiler/src/dmd/res/', '.']

# This is roughly just the frontend files
dmd_srcs = files([
    SRC_DIR+'common/'+'bitfields.d',
    SRC_DIR+'common/'+'file.d',
    SRC_DIR+'common/'+'int128.d',
    SRC_DIR+'common/'+'blake3.d',
    SRC_DIR+'common/'+'outbuffer.d',
    SRC_DIR+'common/'+'smallbuffer.d',
    SRC_DIR+'common/'+'charactertables.d',
    SRC_DIR+'common/'+'identifiertables.d',

    SRC_DIR+'console.d', 
    SRC_DIR+'entity.d', 
    SRC_DIR+'errors.d', 
    SRC_DIR+'errorsink.d', 
    SRC_DIR+'file_manager.d',
    SRC_DIR+'frontend.d',
    SRC_DIR+'globals.d',
    SRC_DIR+'id.d',
    SRC_DIR+'identifier.d',
    SRC_DIR+'lexer.d',
    SRC_DIR+'location.d',
    SRC_DIR+'tokens.d',
    SRC_DIR+'link.d',

    SRC_DIR+'root/'+'aav.d',
    SRC_DIR+'root/'+'complex.d',
    SRC_DIR+'root/'+'env.d',
    SRC_DIR+'root/'+'longdouble.d',
    SRC_DIR+'root/'+'man.d',
    SRC_DIR+'root/'+'optional.d',
    SRC_DIR+'root/'+'response.d',
    SRC_DIR+'root/'+'speller.d',
    SRC_DIR+'root/'+'string.d',
    SRC_DIR+'root/'+'strtold.d',
    SRC_DIR+'root/'+'array.d',
    SRC_DIR+'root/'+'bitarray.d',
    SRC_DIR+'root/'+'ctfloat.d',
    SRC_DIR+'root/'+'file.d',
    SRC_DIR+'root/'+'filename.d',
    SRC_DIR+'root/'+'hash.d',
    SRC_DIR+'root/'+'port.d',
    SRC_DIR+'root/'+'region.d',
    SRC_DIR+'root/'+'rmem.d',
    SRC_DIR+'root/'+'stringtable.d',
    SRC_DIR+'root/'+'utf.d',

    SRC_DIR+'dinifile.d',
    SRC_DIR+'dmdparams.d',
    SRC_DIR+'gluelayer.d',
    SRC_DIR+'mars.d',

    SRC_DIR+'access.d',
    SRC_DIR+'aggregate.d',
    SRC_DIR+'aliasthis.d',
    SRC_DIR+'argtypes_x86.d',
    SRC_DIR+'argtypes_sysv_x64.d',
    SRC_DIR+'argtypes_aarch64.d',
    SRC_DIR+'arrayop.d',
    SRC_DIR+'arraytypes.d',
    SRC_DIR+'astenums.d',
    SRC_DIR+'ast_node.d',
    SRC_DIR+'astcodegen.d',
    SRC_DIR+'asttypename.d',
    SRC_DIR+'attrib.d',
    SRC_DIR+'attribsem.d',
    SRC_DIR+'basicmangle.d',
    SRC_DIR+'blockexit.d',
    SRC_DIR+'builtin.d',
    SRC_DIR+'canthrow.d',
    SRC_DIR+'chkformat.d',
    SRC_DIR+'cli.d',
    SRC_DIR+'clone.d',
    SRC_DIR+'compiler.d',
    SRC_DIR+'cond.d',
    SRC_DIR+'constfold.d',
    SRC_DIR+'cppmangle.d',
    SRC_DIR+'cppmanglewin.d',
    SRC_DIR+'cpreprocess.d',
    SRC_DIR+'ctfeexpr.d',
    SRC_DIR+'ctorflow.d',
    SRC_DIR+'dcast.d',
    SRC_DIR+'dclass.d',
    SRC_DIR+'declaration.d',
    SRC_DIR+'delegatize.d',
    SRC_DIR+'denum.d',
    SRC_DIR+'dimport.d',
    SRC_DIR+'dinterpret.d',
    SRC_DIR+'dmacro.d',
    SRC_DIR+'dmangle.d',
    SRC_DIR+'dmodule.d',
    SRC_DIR+'doc.d',
    SRC_DIR+'dscope.d',
    SRC_DIR+'dstruct.d',
    SRC_DIR+'dsymbol.d',
    SRC_DIR+'dsymbolsem.d',
    SRC_DIR+'dtemplate.d',
    SRC_DIR+'dtoh.d',
    SRC_DIR+'dversion.d',
    SRC_DIR+'enumsem.d',
    SRC_DIR+'escape.d',
    SRC_DIR+'expression.d',
    SRC_DIR+'expressionsem.d',
    SRC_DIR+'func.d',
    SRC_DIR+'funcsem.d',
    SRC_DIR+'hdrgen.d',
    SRC_DIR+'iasm.d',
    SRC_DIR+'iasmgcc.d',
    SRC_DIR+'impcnvtab.d',
    SRC_DIR+'imphint.d',
    SRC_DIR+'importc.d',
    SRC_DIR+'init.d',
    SRC_DIR+'initsem.d',
    SRC_DIR+'inline.d',
    SRC_DIR+'inlinecost.d',
    SRC_DIR+'intrange.d',
    SRC_DIR+'json.d',
    SRC_DIR+'lambdacomp.d',
    SRC_DIR+'mtype.d',
    SRC_DIR+'mustuse.d',
    SRC_DIR+'nogc.d',
    SRC_DIR+'nspace.d',
    SRC_DIR+'ob.d',
    SRC_DIR+'objc.d',
    SRC_DIR+'opover.d',
    SRC_DIR+'optimize.d',
    SRC_DIR+'parse.d',
    SRC_DIR+'parsetimevisitor.d',
    SRC_DIR+'permissivevisitor.d',
    SRC_DIR+'postordervisitor.d',
    SRC_DIR+'pragmasem.d',
    SRC_DIR+'printast.d',
    SRC_DIR+'rootobject.d',
    SRC_DIR+'safe.d',
    SRC_DIR+'sapply.d',
    SRC_DIR+'semantic2.d',
    SRC_DIR+'semantic3.d',
    SRC_DIR+'sideeffect.d',
    SRC_DIR+'statement.d',
    SRC_DIR+'statement_rewrite_walker.d',
    SRC_DIR+'statementsem.d',
    SRC_DIR+'staticassert.d',
    SRC_DIR+'staticcond.d',
    SRC_DIR+'stmtstate.d',
    SRC_DIR+'target.d',
    SRC_DIR+'templatesem.d',
    SRC_DIR+'templateparamsem.d',
    SRC_DIR+'traits.d',
    SRC_DIR+'transitivevisitor.d',
    SRC_DIR+'typesem.d',
    SRC_DIR+'typinf.d',
    SRC_DIR+'utils.d',
    SRC_DIR+'visitor.d',
    SRC_DIR+'foreachvar.d',
    SRC_DIR+'cparse.d',
])

#### Dependencies ####

dmd_dep = declare_dependency(
    sources: dmd_srcs,
    include_directories: src_dirs,
    d_import_dirs: string_import_dirs,
    d_module_versions: ['NoBackend', 'GC', 'NoMain', 'MARS', 'CallbackAPI']
)